
   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl


--1.75.51--

   *	Upgraded SQLite to 3.15.2.

   +	Added inplace tool.

   +	Added od-like bitdump tool.

   +	Added inetd myip service tool and check_myip.sh dynamic DNS script.

--1.75.50--

   +	Add support to smtp2 API to pass in the HELO argument, fix the
	logging, and add -e and -H options to smtp2 CLI for envelope
	testing and HELO argument.

   !	Fix socket3_client() handling of ETIMEOUT reporting.

   +	Add addpasswd.sh for Nginx password files.

   !	Fix flip tool handling of temporary file name to avoid name
	collisions if multiple instances run at the same time.  Also
	replace custom error reporting code in favour of err.h.

   +	Simple inetd service (myip) reports IPv4 or IPv6 address and
	port number. If the server port is 80 or any port between
	8000..8999, then treat it as an HTTP request.

--1.75.49--

   *	Upgraded SQLite to 3.9.2

   !	Updated TLD list.

   +	Add functions to read/write UTF8 file streams.

   +	Add string search functions based on Horspool, Sunday, and Smith.

   +	Add .onion to RFC2606 reserved list.

   +	Add basic err.h for Windows native.

   !	Fixed my version of cmp -l option to behave like normal cmp(1).

   !	Fix TokenNext handling of empty string from command line, ie. '\0'.

   !	Fixed option usage dump to allow for empty list items and handling
	of escaped semi-colon in a list item.

--1.75.48--

   +	Added pdqIgnoreTCP() and dns-ignore-tcp option for PDQ API.
   	pdq CLI now has -T option to disable TCP lookups.  Requested
   	by Alex Broens.

   !	When making a TCP query, assert the TC bit is off.

   !	Some cosmetic changes to PDQ logging.

--1.75.47--

   !	Modify makefiles and version.sh.in to correspond with recent
   	switch to acsite.m4 and renaming of some macros.

  !!	Fixed memory leak in pdqRootGetNS().
